--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="team-item">
                             <div class="team-content">
-                                <i class="fa-solid fa-quote-right quote"></i>
+                                <j class="fa-solid fa-quote-right quote"></j>
                                 <p style="text-align: justify;">
                                     GenRoute provided me with a exceptional experience. During the discussion, their
                                     personnel went above and beyond
@@ -294,7 +294,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="team-item">
                             <div class="team-content">
-                                <i class="fa-solid fa-quote-right quote"></i>
+                                <j class="fa-solid fa-quote-right quote"></j>
                                 <p style="text-align: justify;">
                                     GenRoute provided me with a exceptional experience. During the discussion, their
                                     personnel went above and beyond
@@ -315,7 +315,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="team-item">
                             <div class="team-content">
-                                <i class="fa-solid fa-quote-right quote"></i>
+                                <j class="fa-solid fa-quote-right quote"></j>
                                 <p style="text-align: justify;">
                                     GenRoute provided me with a exceptional experience. During the discussion, their
                                     personnel went above and beyond
