--- a/index.html
+++ b/index.html
@@ -204,42 +204,42 @@
                     <div class="row">
                         <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                             <a href="#" class="mini-box">
-                                <span class="i">1</span>
+                                <span class="x">1</span>
                                 <strong>Get Ideas</strong>
                                 <span>Godard pabst prism fam cliche.</span>
                             </a>
                         </div>
                         <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                             <a href="#" class="mini-box">
-                                <span class="i">2</span>
+                                <span class="x">2</span>
                                 <strong>Sketch Up</strong>
                                 <span>Godard pabst prism fam cliche.</span>
                             </a>
                         </div>
                         <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                             <a href="#" class="mini-box">
-                                <span class="i">3</span>
+                                <span class="x">3</span>
                                 <strong>Discuss</strong>
                                 <span>Godard pabst prism fam cliche.</span>
                             </a>
                         </div>
                         <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                             <a href="#" class="mini-box">
-                                <span class="i">4</span>
+                                <span class="x">4</span>
                                 <strong>Revise</strong>
                                 <span>Godard pabst prism fam cliche.</span>
                             </a>
                         </div>
                         <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                             <a href="#" class="mini-box">
-                                <span class="i">5</span>
+                                <span class="x">5</span>
                                 <strong>Approve</strong>
                                 <span>Godard pabst prism fam cliche.</span>
                             </a>
                         </div>
                         <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                             <a href="#" class="mini-box">
-                                <span class="i">6</span>
+                                <span class="x">6</span>
                                 <strong>Launch</strong>
                                 <span>Godard pabst prism fam cliche.</span>
                             </a>
