--- a/index.html
+++ b/index.html
@@ -342,27 +342,39 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-6 col-sm-12">
                             <div class="count-item">
+                            <div>
                                 <strong>3</strong>
+                                <span>+</span>
+                            </div>
                                 <span>Schools</span>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12">
                             <div class="count-item">
-                                <strong>700</strong>
-                                <span>Students</span>
-                            </div>
+                                <div>
+                                    <strong>500</strong>
+                                    <span1>+</span1>
+                                </div>
+                                    <span>students</span>
+                                </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12">
                             <div class="count-item">
-                                <strong>14</strong>
-                                <span>Speakers</span>
-                            </div>
+                                <div>
+                                    <strong>12</strong>
+                                    <span>+</span>
+                                </div>
+                                    <span>Speakers</span>
+                                </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12">
                             <div class="count-item">
-                                <strong>2</strong>
-                                <span>Cities</span>
-                            </div>
+                                <div>
+                                    <strong>2</strong>
+                                    <span>+</span>
+                                </div>
+                                    <span>Cities</span>
+                                </div>
                         </div>
                     </div>
                 </div>
